--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment-1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbvLLFczhH+ZEhWNT/unwT",
+      "authorship_tag": "ABX9TyOvcS1qgFVMxIty0DHIVPvf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Implement the methods of String with examples"
+        "1) Implement the methods of String with examples"
       ],
       "metadata": {
         "id": "JL2j1tVHsKBZ"
@@ -88,7 +88,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Implement the methods of List with examples."
+        "2) Implement the methods of List with examples."
       ],
       "metadata": {
         "id": "VUCpg38stEtB"
@@ -147,7 +147,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Implement the methods of Tuple with examples."
+        "3)Implement the methods of Tuple with examples."
       ],
       "metadata": {
         "id": "pvOAkCvktzOJ"
@@ -199,7 +199,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Implement the methods of Dictionary with examples"
+        "4)Implement the methods of Dictionary with examples"
       ],
       "metadata": {
         "id": "9tSndetEubj5"
@@ -242,7 +242,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5. Implement the methods of Set with examples."
+        "5)Implement the methods of Set with examples."
       ],
       "metadata": {
         "id": "qbqcilYK8hbr"
@@ -305,7 +305,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "6. Write a python program to convert Decimal to Binary, Octal and Hexadecimal with \n",
+        ""
+      ],
+      "metadata": {
+        "id": "cEgfrmHMHCZ_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6) Write a python program to convert Decimal to Binary, Octal and Hexadecimal with \n",
         "direct method."
       ],
       "metadata": {
@@ -344,7 +353,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "7. Implement Arithmetic operators with examples."
+        "7)Implement Arithmetic operators with examples."
       ],
       "metadata": {
         "id": "WFFWRdbe9wgE"
@@ -392,7 +401,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "8. Implement Assignment operators with examples"
+        "8)Implement Assignment operators with examples"
       ],
       "metadata": {
         "id": "ySXgXojk-1pa"
@@ -447,7 +456,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "9. Implement Comparison operators with examples"
+        "9)Implement Comparison operators with examples"
       ],
       "metadata": {
         "id": "TgDVt5rO_DCq"
@@ -491,7 +500,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "10. Implement Logical operators with examples."
+        "10)Implement Logical operators with examples."
       ],
       "metadata": {
         "id": "KstEQCZt_POC"
@@ -529,7 +538,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "11. Implement Bitwise operators with examples.\n"
+        "11)Implement Bitwise operators with examples.\n"
       ],
       "metadata": {
         "id": "t0WlfeJC_oVD"
@@ -577,7 +586,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "12. Implement Membership operators with examples"
+        "12)Implement Membership operators with examples"
       ],
       "metadata": {
         "id": "2nbGgoOXAK7r"
@@ -620,7 +629,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "13. Implement Identity operators with examples\n"
+        "13)Implement Identity operators with examples\n"
       ],
       "metadata": {
         "id": "MvpPd9ApAmIL"
@@ -656,7 +665,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "14.Demonstrate Negative indexing for List and apply slicing."
+        "14)Demonstrate Negative indexing for List and apply slicing."
       ],
       "metadata": {
         "id": "8Ua1_kIYCgYP"
@@ -701,7 +710,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "15.Predict the output for the given code snippet and justify the result."
+        "15)Predict the output for the given code snippet and justify the result."
       ],
       "metadata": {
         "id": "nsJeYX6JCyuR"
